--- a/style.css
+++ b/style.css
@@ -100,6 +100,16 @@ body{
     font-size: 20px;
 }
 
+.promptAreaDisplay{
+    background-color: bisque;
+    grid-area: 2 / 2 / 6 / 5 ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
+}
+
 .hexaArea{
     background-color: blue;
     grid-area: 2 / 1 / 6 / 2;
